Bug 431182 - ctrl+alt+I to resize has the cursor as default on the OK button
Summary: ctrl+alt+I to resize has the cursor as default on the OK button
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resize/Scale Image/Layer (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Reinold Rojas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-05 14:52 UTC by tt
Modified: 2021-10-22 07:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tt 2021-01-05 14:52:45 UTC
SUMMARY


STEPS TO REPRODUCE
hit ctrl+alt+I to resize and type a new width number, but it doesn't work as the active cursor is on the "OK" button to confirm no change at all. not intuitive or useful.
Ctrl+Alt+C for crop does it right, the active cursor is in the first input field as it should be, you can type new values straight ahead. this is intuitive and for ease of use and also for consistency the active field for the resize menu should be the first input field of course.
Comment 1 Halla Rempt 2021-10-22 07:17:29 UTC
Git commit d985c2804a404c6428cfba8cb2c2c379681a1ad8 by Halla Rempt, on behalf of Reinold Rojas.
Committed on 22/10/2021 at 07:15.
Pushed by rempt into branch 'master'.

Default scale to size dialog focus to pixel width box

M  +1    -0    libs/ui/imagesize/dlg_imagesize.cc

https://invent.kde.org/graphics/krita/commit/d985c2804a404c6428cfba8cb2c2c379681a1ad8
Comment 2 Halla Rempt 2021-10-22 07:18:55 UTC
Git commit 637546aa10174b5105fc9c97be8caf359e6f2f7e by Halla Rempt, on behalf of Reinold Rojas.
Committed on 22/10/2021 at 07:18.
Pushed by rempt into branch 'krita/5.0'.

Default scale to size dialog focus to pixel width box
(cherry picked from commit d985c2804a404c6428cfba8cb2c2c379681a1ad8)

M  +1    -0    libs/ui/imagesize/dlg_imagesize.cc

https://invent.kde.org/graphics/krita/commit/637546aa10174b5105fc9c97be8caf359e6f2f7e