Default scale to size dialog focus to pixel width box

BUG:431182